--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         "illuminate/bus": "5.1.*",
         "guzzlehttp/guzzle": "^6.0"
     },
+    "autoload": {
+        "psr-4": { "Redpic\\Antigate\\": "src/" }
+    }
     "license": "MIT",
     "authors": [
         {
